--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 UpdatedIWPfirmware5-4\.generated_files
 UpdatedIWPfirmware5-4\debug
 UpdatedIWPfirmware5-4\dist
+UpdatedIWPfirmware5-4/nbproject/configurations.xml
